getMyHomeworks StudentService updated